Main spacing fix

--- a/src/sass/layout/_base.scss
+++ b/src/sass/layout/_base.scss
@@ -34,7 +34,7 @@ body {
                             [main-end];
 
     @include respond(phone) {
-        grid-template-rows: 6rem minmax(100rem, 1fr);
+        grid-template-rows: 6rem minmax(100vh, 1fr);
     }
 }
 
@@ -44,4 +44,8 @@ body {
     grid-template-columns: [sidebar-start] 25rem
                             [sidebar-end main-start] 1fr
                             [main-end];
+
+    @include respond(phone) {
+        grid-template-rows: 6rem minmax(100vh, 1fr);
+    }
 }
